[package]
name = "wasm"
version = "1.3.7"
edition = "2021"
license = "LICENSE"
description = "Leak Checker engine"
repository = "https://github.com/anvie/leak-checker"

[lib]
crate-type = ["cdylib"]

[dependencies]
"wasm-bindgen" = "0.2.82"
lhash = { git = "https://github.com/anvie/lhash", branch = "master" }
lazy_static = "1.4.0"
